reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_with_fields-4.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super :: into_input_python_code :: < TestEnumWithFields > ()"
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import (
    BaseModel,
    ConfigDict,
    Field,
    RootModel,
    model_serializer,
    model_validator,
)

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible
from reflectapi_runtime import (
    parse_externally_tagged as _parse_externally_tagged,
    serialize_externally_tagged as _serialize_externally_tagged,
)


class ReflectapiDemoTestsEnumsTestEnumWithFieldsVariant1Variant(BaseModel):
    """Variant1 variant"""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    field_0: int


class ReflectapiDemoTestsEnumsTestEnumWithFieldsVariant2Variant(BaseModel):
    """Variant2 variant"""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    field_0: str
    field_1: float


# Externally tagged enum using RootModel
ReflectapiDemoTestsEnumsTestEnumWithFieldsVariants = Union[
    ReflectapiDemoTestsEnumsTestEnumWithFieldsVariant1Variant,
    ReflectapiDemoTestsEnumsTestEnumWithFieldsVariant2Variant,
]


class ReflectapiDemoTestsEnumsTestEnumWithFields(
    RootModel[ReflectapiDemoTestsEnumsTestEnumWithFieldsVariants]
):
    """Externally tagged enum"""

    @model_validator(mode="before")
    @classmethod
    def _validate(cls, data):
        return _parse_externally_tagged(
            data,
            {
                "Variant1": lambda v: (
                    ReflectapiDemoTestsEnumsTestEnumWithFieldsVariant1Variant(field_0=v)
                ),
                "Variant2": lambda v: (
                    ReflectapiDemoTestsEnumsTestEnumWithFieldsVariant2Variant(
                        field_0=v[0], field_1=v[1]
                    )
                    if isinstance(v, list)
                    else (_ for _ in ()).throw(
                        ValueError("Expected list for tuple variant Variant2")
                    )
                ),
            },
            (
                ReflectapiDemoTestsEnumsTestEnumWithFieldsVariant1Variant,
                ReflectapiDemoTestsEnumsTestEnumWithFieldsVariant2Variant,
            ),
            "ReflectapiDemoTestsEnumsTestEnumWithFields",
        )

    @model_serializer
    def _serialize(self):
        return _serialize_externally_tagged(
            self.root,
            {
                "Variant1": (
                    lambda r: isinstance(
                        r, ReflectapiDemoTestsEnumsTestEnumWithFieldsVariant1Variant
                    ),
                    lambda r: {"Variant1": r.field_0},
                ),
                "Variant2": (
                    lambda r: isinstance(
                        r, ReflectapiDemoTestsEnumsTestEnumWithFieldsVariant2Variant
                    ),
                    lambda r: {"Variant2": [r.field_0, r.field_1]},
                ),
            },
            "ReflectapiDemoTestsEnumsTestEnumWithFields",
        )


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class enums:
            """Namespace for enums types."""

            TestEnumWithFieldsVariant1Variant = (
                ReflectapiDemoTestsEnumsTestEnumWithFieldsVariant1Variant
            )
            TestEnumWithFieldsVariant2Variant = (
                ReflectapiDemoTestsEnumsTestEnumWithFieldsVariant2Variant
            )
            TestEnumWithFields = ReflectapiDemoTestsEnumsTestEnumWithFields


class AsyncInputClient:
    """Async client for input_ operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[reflectapi_demo.tests.enums.TestEnumWithFields] = None,
    ) -> ApiResponse[Any]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/input_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=None,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.input_ = AsyncInputClient(self)


class InputClient:
    """Synchronous client for input_ operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[reflectapi_demo.tests.enums.TestEnumWithFields] = None,
    ) -> ApiResponse[Any]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/input_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=None,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.input_ = InputClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
for _model in [
    ReflectapiDemoTestsEnumsTestEnumWithFields,
]:
    try:
        _model.model_rebuild()
    except Exception:
        pass
