reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_with_generics-4.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super :: into_input_python_code :: < TestEnumWithGenerics::<u8> > ()"
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import (
    BaseModel,
    ConfigDict,
    Field,
    RootModel,
    model_serializer,
    model_validator,
)

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible
from reflectapi_runtime import (
    parse_externally_tagged as _parse_externally_tagged,
    serialize_externally_tagged as _serialize_externally_tagged,
)


# Type variables for generic types


T = TypeVar("T")


class ReflectapiDemoTestsEnumsTestEnumWithGenericsVariant1Variant(
    BaseModel, Generic[T]
):
    """Variant1 variant"""

    model_config = ConfigDict(
        extra="ignore", populate_by_name=True, protected_namespaces=()
    )

    field_0: T


class ReflectapiDemoTestsEnumsTestEnumWithGenericsVariant2Variant(
    BaseModel, Generic[T]
):
    """Variant2 variant"""

    model_config = ConfigDict(
        extra="ignore", populate_by_name=True, protected_namespaces=()
    )

    field_0: T
    field_1: T


# Externally tagged enum using RootModel
ReflectapiDemoTestsEnumsTestEnumWithGenericsVariants = Union[
    ReflectapiDemoTestsEnumsTestEnumWithGenericsVariant1Variant[T],
    ReflectapiDemoTestsEnumsTestEnumWithGenericsVariant2Variant[T],
]


class ReflectapiDemoTestsEnumsTestEnumWithGenerics(
    RootModel[ReflectapiDemoTestsEnumsTestEnumWithGenericsVariants], Generic[T]
):
    """Externally tagged enum"""

    @classmethod
    def __class_getitem__(cls, params):
        return cls

    @model_validator(mode="before")
    @classmethod
    def _validate(cls, data):
        return _parse_externally_tagged(
            data,
            {
                "Variant1": lambda v: (
                    ReflectapiDemoTestsEnumsTestEnumWithGenericsVariant1Variant(
                        field_0=v
                    )
                ),
                "Variant2": lambda v: (
                    ReflectapiDemoTestsEnumsTestEnumWithGenericsVariant2Variant(
                        field_0=v[0], field_1=v[1]
                    )
                    if isinstance(v, list)
                    else (_ for _ in ()).throw(
                        ValueError("Expected list for tuple variant Variant2")
                    )
                ),
            },
            (
                ReflectapiDemoTestsEnumsTestEnumWithGenericsVariant1Variant,
                ReflectapiDemoTestsEnumsTestEnumWithGenericsVariant2Variant,
            ),
            "ReflectapiDemoTestsEnumsTestEnumWithGenerics",
        )

    @model_serializer
    def _serialize(self):
        return _serialize_externally_tagged(
            self.root,
            {
                "Variant1": (
                    lambda r: isinstance(
                        r, ReflectapiDemoTestsEnumsTestEnumWithGenericsVariant1Variant
                    ),
                    lambda r: {"Variant1": r.field_0},
                ),
                "Variant2": (
                    lambda r: isinstance(
                        r, ReflectapiDemoTestsEnumsTestEnumWithGenericsVariant2Variant
                    ),
                    lambda r: {"Variant2": [r.field_0, r.field_1]},
                ),
            },
            "ReflectapiDemoTestsEnumsTestEnumWithGenerics",
        )


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class enums:
            """Namespace for enums types."""

            TestEnumWithGenericsVariant1Variant = (
                ReflectapiDemoTestsEnumsTestEnumWithGenericsVariant1Variant
            )
            TestEnumWithGenericsVariant2Variant = (
                ReflectapiDemoTestsEnumsTestEnumWithGenericsVariant2Variant
            )
            TestEnumWithGenerics = ReflectapiDemoTestsEnumsTestEnumWithGenerics


class AsyncInputClient:
    """Async client for input_ operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[reflectapi_demo.tests.enums.TestEnumWithGenerics[int]] = None,
    ) -> ApiResponse[Any]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/input_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=None,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.input_ = AsyncInputClient(self)


class InputClient:
    """Synchronous client for input_ operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[reflectapi_demo.tests.enums.TestEnumWithGenerics[int]] = None,
    ) -> ApiResponse[Any]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/input_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=None,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.input_ = InputClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
_rebuild_errors: list[str] = []
for _model in [
    ReflectapiDemoTestsEnumsTestEnumWithGenerics,
]:
    if not hasattr(_model, "model_rebuild"):
        continue
    try:
        _model.model_rebuild()
    except Exception as _exc:
        _rebuild_errors.append(f"  - {_model.__name__}: {type(_exc).__name__}: {_exc}")
if _rebuild_errors:
    raise RuntimeError(
        "reflectapi: failed to rebuild "
        + str(len(_rebuild_errors))
        + " generated model(s). This usually means the codegen emitted an annotation pointing at a symbol that was never defined (a dangling type reference). Fix the codegen rather than catching this error.\n"
        + "\n".join(_rebuild_errors)
    )
