reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_with_generics_and_fields-4.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super :: into_input_python_code :: < TestEnumWithGenericsAndFields::<u8> > ()"
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import (
    BaseModel,
    ConfigDict,
    Field,
    RootModel,
    model_serializer,
    model_validator,
)

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible
from reflectapi_runtime import (
    parse_externally_tagged as _parse_externally_tagged,
    serialize_externally_tagged as _serialize_externally_tagged,
)


# Type variables for generic types


T = TypeVar("T")


class ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFieldsVariant1Variant(
    BaseModel, Generic[T]
):
    """Variant1 variant"""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    field_0: int


class ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFieldsVariant2Variant(
    BaseModel, Generic[T]
):
    """Variant2 variant"""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    field_0: T
    field_1: T


# Externally tagged enum using RootModel
ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFieldsVariants = Union[
    ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFieldsVariant1Variant[T],
    ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFieldsVariant2Variant[T],
]


class ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFields(
    RootModel[ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFieldsVariants], Generic[T]
):
    """Externally tagged enum"""

    @classmethod
    def __class_getitem__(cls, params):
        return cls

    @model_validator(mode="before")
    @classmethod
    def _validate(cls, data):
        return _parse_externally_tagged(
            data,
            {
                "Variant1": lambda v: (
                    ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFieldsVariant1Variant(
                        field_0=v
                    )
                ),
                "Variant2": lambda v: (
                    ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFieldsVariant2Variant(
                        field_0=v[0], field_1=v[1]
                    )
                    if isinstance(v, list)
                    else (_ for _ in ()).throw(
                        ValueError("Expected list for tuple variant Variant2")
                    )
                ),
            },
            (
                ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFieldsVariant1Variant,
                ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFieldsVariant2Variant,
            ),
            "ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFields",
        )

    @model_serializer
    def _serialize(self):
        return _serialize_externally_tagged(
            self.root,
            {
                "Variant1": (
                    lambda r: isinstance(
                        r,
                        ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFieldsVariant1Variant,
                    ),
                    lambda r: {"Variant1": r.field_0},
                ),
                "Variant2": (
                    lambda r: isinstance(
                        r,
                        ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFieldsVariant2Variant,
                    ),
                    lambda r: {"Variant2": [r.field_0, r.field_1]},
                ),
            },
            "ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFields",
        )


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class enums:
            """Namespace for enums types."""

            TestEnumWithGenericsAndFieldsVariant1Variant = (
                ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFieldsVariant1Variant
            )
            TestEnumWithGenericsAndFieldsVariant2Variant = (
                ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFieldsVariant2Variant
            )
            TestEnumWithGenericsAndFields = (
                ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFields
            )


class AsyncInputClient:
    """Async client for input_ operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[
            reflectapi_demo.tests.enums.TestEnumWithGenericsAndFields[int]
        ] = None,
    ) -> ApiResponse[Any]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/input_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=None,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.input_ = AsyncInputClient(self)


class InputClient:
    """Synchronous client for input_ operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[
            reflectapi_demo.tests.enums.TestEnumWithGenericsAndFields[int]
        ] = None,
    ) -> ApiResponse[Any]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/input_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=None,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.input_ = InputClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
for _model in [
    ReflectapiDemoTestsEnumsTestEnumWithGenericsAndFields,
]:
    try:
        _model.model_rebuild()
    except Exception:
        pass
