reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_mixed_variants-2.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super::into_typescript_code::<Media>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.enums.Media,
      headers: {},
    ) => AsyncResult<reflectapi_demo.tests.enums.Media, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace enums {
      export interface ImageData {
        width: number /* u32 */;
        height: number /* u32 */;
      }

      export type Media =
        | ({ media_type: "image" } & reflectapi_demo.tests.enums.ImageData)
        | ({ media_type: "video" } & reflectapi_demo.tests.enums.VideoData)
        | {
            media_type: "audio";
            url: string;
            format: string | null;
          }
        | { media_type: "text" };

      export interface VideoData {
        duration: number /* u32 */;
        resolution: string | null;
      }
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (input: reflectapi_demo.tests.enums.Media, headers: {}) =>
      __request<
        reflectapi_demo.tests.enums.Media,
        {},
        reflectapi_demo.tests.enums.Media,
        {}
      >(client, "/inout_test", input, headers);
  }
}
