reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_mixed_variants-3.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super::into_rust_code::<Media>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
        base_url: reflectapi::rt::Url,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn try_new(
            client: C,
            base_url: reflectapi::rt::Url,
        ) -> std::result::Result<Self, reflectapi::rt::UrlParseError> {
            if base_url.cannot_be_a_base() {
                return Err(reflectapi::rt::UrlParseError::RelativeUrlWithCannotBeABaseBase);
            }

            Ok(Self { client, base_url })
        }
        pub async fn inout_test(
            &self,
            input: super::types::reflectapi_demo::tests::enums::Media,
            headers: reflectapi::Empty,
        ) -> Result<
            super::types::reflectapi_demo::tests::enums::Media,
            reflectapi::rt::Error<reflectapi::Empty, C::Error>,
        > {
            reflectapi::rt::__request_impl(
                &self.client,
                self.base_url
                    .join("/inout_test")
                    .expect("checked base_url already and path is valid"),
                input,
                headers,
            )
            .await
        }
    }
}
pub mod types {

    pub mod reflectapi_demo {
        pub mod tests {
            pub mod enums {

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct ImageData {
                    pub width: u32,
                    pub height: u32,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                #[serde(tag = "media_type")]
                pub enum Media {
                    #[serde(rename = "image")]
                    Image(super::super::super::reflectapi_demo::tests::enums::ImageData),
                    #[serde(rename = "video")]
                    Video(super::super::super::reflectapi_demo::tests::enums::VideoData),
                    #[serde(rename = "audio")]
                    Audio {
                        url: std::string::String,
                        format: std::option::Option<std::string::String>,
                    },
                    #[serde(rename = "text")]
                    Text,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct VideoData {
                    pub duration: u32,
                    pub resolution: std::option::Option<std::string::String>,
                }
            }
        }
    }
}
