reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_mixed_variants-4.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "reflectapi::codegen::openapi::Spec::from(&schema)"
---
{
  "openapi": "3.1.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.enums.E"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.enums.E"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.enums.A": {
        "type": "object",
        "title": "reflectapi_demo.tests.enums.A",
        "required": [
          "x",
          "y"
        ],
        "properties": {
          "x": {
            "$ref": "#/components/schemas/u32"
          },
          "y": {
            "$ref": "#/components/schemas/u32"
          }
        }
      },
      "reflectapi_demo.tests.enums.B": {
        "type": "object",
        "title": "reflectapi_demo.tests.enums.B",
        "required": [
          "w",
          "z"
        ],
        "properties": {
          "w": {
            "oneOf": [
              {
                "description": "Null",
                "type": "null"
              },
              {
                "$ref": "#/components/schemas/std.string.String"
              }
            ]
          },
          "z": {
            "$ref": "#/components/schemas/u32"
          }
        }
      },
      "reflectapi_demo.tests.enums.E": {
        "oneOf": [
          {
            "type": "object",
            "title": "reflectapi_demo.tests.enums.A",
            "required": [
              "tag",
              "x",
              "y"
            ],
            "properties": {
              "tag": {
                "const": "a"
              },
              "x": {
                "$ref": "#/components/schemas/u32"
              },
              "y": {
                "$ref": "#/components/schemas/u32"
              }
            }
          },
          {
            "type": "object",
            "title": "reflectapi_demo.tests.enums.B",
            "required": [
              "tag",
              "w",
              "z"
            ],
            "properties": {
              "tag": {
                "const": "b"
              },
              "w": {
                "oneOf": [
                  {
                    "description": "Null",
                    "type": "null"
                  },
                  {
                    "$ref": "#/components/schemas/std.string.String"
                  }
                ]
              },
              "z": {
                "$ref": "#/components/schemas/u32"
              }
            }
          },
          {
            "type": "object",
            "title": "c",
            "required": [
              "p",
              "q",
              "tag"
            ],
            "properties": {
              "p": {
                "$ref": "#/components/schemas/std.string.String"
              },
              "q": {
                "oneOf": [
                  {
                    "description": "Null",
                    "type": "null"
                  },
                  {
                    "$ref": "#/components/schemas/std.string.String"
                  }
                ]
              },
              "tag": {
                "const": "c"
              }
            }
          },
          {
            "type": "object",
            "required": [
              "tag"
            ],
            "properties": {
              "tag": {
                "const": "d"
              }
            }
          }
        ]
      },
      "std.string.String": {
        "description": "UTF-8 encoded string",
        "type": "string"
      },
      "u32": {
        "description": "32-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
